--- a/WebServiceDemo/WebServiceDemo.csproj
+++ b/WebServiceDemo/WebServiceDemo.csproj
@@ -15,8 +15,13 @@
     <Folder Include="Helpers\" />
     <Folder Include="Entities\" />
     <Folder Include="Repositories\" />
+    <Folder Include="GraphQL\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Bogus" Version="32.0.1" />
+    <PackageReference Include="HotChocolate" Version="11.0.1" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="11.0.1" />
+    <PackageReference Include="HotChocolate.Types" Version="11.0.1" />
+    <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
   </ItemGroup>
 </Project>
