--- a/WebServiceDemo/WebServiceDemo.csproj
+++ b/WebServiceDemo/WebServiceDemo.csproj
@@ -23,5 +23,6 @@
     <PackageReference Include="HotChocolate.AspNetCore" Version="11.0.2" />
     <PackageReference Include="HotChocolate.Types" Version="11.0.2" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
+    <PackageReference Include="HotChocolate.Data" Version="11.0.2" />
   </ItemGroup>
 </Project>
